Minor: Fixed font size for intro section on mobile

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -551,7 +551,7 @@ body.dark-mode .intro-content .intro-social-list-inline .intro-social-link:hover
     }
 
     .intro-content #my-intro {
-        font-size: 0.6rem;
+        font-size: 0.8rem;
     }
 
     .intro-content .intro-social-list-inline .intro-icon {
@@ -607,7 +607,7 @@ body.dark-mode .intro-content .intro-social-list-inline .intro-social-link:hover
     }
     
     .intro-content #section-heading {
-        font-size: 1.1rem;
+        font-size: 1.2rem;
     }
 
     .intro-container .learn-more {
